--- a/src/pages/AddressPage/AddressPage.module.scss
+++ b/src/pages/AddressPage/AddressPage.module.scss
@@ -2,7 +2,8 @@
   padding: 32px;
   width: 100%;
   height: calc(100vh - 80px);
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   &::-webkit-scrollbar {
     width: 6px;
